--- a/Ex_Files_Building_Modern_Projects_React/CH03/03_10/Start/package.json
+++ b/Ex_Files_Building_Modern_Projects_React/CH03/03_10/Start/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^4.13.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
